# ChangeLog for dev-perl/gtk2-spell
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-spell/ChangeLog,v 1.16 2007/01/15 22:37:28 mcummings Exp $

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  gtk2-spell-1.03.ebuild:
  Ebuild maintenance

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  gtk2-spell-1.03.ebuild:
  Adding perl dep; fixed DEPEND

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> gtk2-spell-1.03.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed header; fixed DEPEND

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org> gtk2-spell-1.03.ebuild:
  Mark 1.03 stable on ia64

  08 Sep 2005; Aron Griffis <agriffis@gentoo.org> gtk2-spell-1.03.ebuild:
  Mark 1.03 stable on alpha

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> gtk2-spell-1.03.ebuild:
  add ~ia64

  17 May 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gtk2-spell-1.03.ebuild:
  Stable on sparc

  06 May 2005; Sven Wegener <swegener@gentoo.org> gtk2-spell-1.03.ebuild:
  Removed * postfix from <, <=, >= and > dependencies.

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  gtk2-spell-1.03.ebuild:
  Cleaning for mirror

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> gtk2-spell-1.03.ebuild:
  stable on amd64

  30 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
  gtk2-spell-1.00.ebuild, gtk2-spell-1.02.ebuild:
  No longer on CPAN

*gtk2-spell-1.03 (30 Dec 2003)

  30 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
  gtk2-spell-1.03.ebuild:
  New version on CPAN

*gtk2-spell-1.02 (08 Sep 2003)

  08 Sep 2003; Michael Cummings <mcummings@gentoo.org> gtk2-spell-1.02.ebuild:
  new version from sourceforge

  04 Aug 2003; Michael Cummings <mcummings@gentoo.org> gtk2-spell-1.00.ebuild:
  changed ref to glib-perl

*gtk2-spell-1.00 (20 Jul 2003)

  20 Jul 2003; Michael Cummings <mcummings@gentoo.org> gtk2-spell-1.00.ebuild:
  submitted by Rigo Ketelings <rigo@home.nl> in bug 24036

