@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-spell/gtk2-spell-1.03.ebuild,v 1.14 2007/07/10 23:33:27 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-spell/gtk2-spell-1.03.ebuild,v 1.15 2008/01/17 16:37:47 flameeyes Exp $
 
 inherit perl-module
 
@@ -15,11 +15,13 @@ LICENSE="GPL-2"
 KEYWORDS="alpha amd64 ~hppa ia64 ~ppc sparc x86"
 IUSE=""
 
-DEPEND=">=x11-libs/gtk+-2
+RDEPEND=">=x11-libs/gtk+-2
 	>=app-text/gtkspell-2
 	>=dev-perl/glib-perl-1.012
 	>=dev-perl/gtk2-perl-1.012
 	dev-lang/perl"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
 
 src_unpack() {
 	unpack ${A}
