@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/gtk2-spell
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-spell/ChangeLog,v 1.16 2007/01/15 22:37:28 mcummings Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gtk2-spell/ChangeLog,v 1.17 2008/01/17 16:37:47 flameeyes Exp $
+
+  17 Jan 2008; Diego Pettenò <flameeyes@gentoo.org> gtk2-spell-1.03.ebuild:
+  Add missing pkg-config dependency. Thanks Patrick in bug #206186.
 
   15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   gtk2-spell-1.03.ebuild:
